--- a/test.html
+++ b/test.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-<div id="gadget_1"></div>
-
-
 <script src="libs/jquery.js"></script>
 <script src="libs/d3.min.js"></script>
 <script src="libs/underscore.js"></script>
@@ -28,6 +25,9 @@
     // todo marketo lead id?
     var uuid = generateQuickGuid();
     require(["gadget", "utils/queryUtils"], function (Gadget, QueryUtils) {
+        var gadgetId = _.uniqueId("gadget");
+        $('body').prepend('<div id=\"' + gadgetId + '" />');
+
         console.log(uuid, Gadget, typeof(Gadget));
         try {
             var storage = {
@@ -52,15 +52,18 @@
                 return null;
             };
 
-            var userState = {gadget: {get: getFunction},
+            var userState = {
+                gadget: {get: getFunction},
                 get: storage.get,
                 set: storage.set,
-                save: storage.set};
+                save: storage.set
+            };
 
             var g = new Gadget({
-                "$el": $("#gadget_1"),
+                "$el": $("#" + gadgetId),
                 config: {get: configGetFunction},
-                userState: userState});
+                userState: userState
+            });
 
             g.render();
         } catch (e) {
