adding test for spamming the page with gadgets

--- a/adocExample/adocExample.html
+++ b/adocExample/adocExample.html
@@ -470,12 +470,19 @@ Thinking about them and writing &amp; executing them incrementally helps you muc
 <h4 id="_example_gadget_number_two">Example Gadget Number Two!</h4>
 <a href="#ex2" onclick="setGadgetUrl('#ex2')" rel="modal:open">Gadget 2</a>
 <iframe id="ex2" style="display:none;" data-src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="850" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="paragraph">
+<p>spamming the page with gadgets:</p>
+</div>
+<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-06-16 15:24:44 CEST
+Last updated 2016-06-17 12:51:01 EDT
 </div>
 </div>
 </body>
