--- a/test.html
+++ b/test.html
@@ -31,12 +31,15 @@
         console.log(uuid, Gadget, typeof(Gadget));
         try {
             var storage = {
+                data : {},
                 set: function (prop, value) {
-                    console.log("storing", prop, value);
-                    localStorage.setItem(prop, JSON.stringify(value));
+                    console.log("storing", prop, value, storage.data);
+                    // localStorage.setItem(prop, JSON.stringify(value));
+                    storage.data[prop]=value;
                 },
                 get: function (prop) {
-                    var value = JSON.parse(localStorage.getItem(prop));
+                    // var value = JSON.parse(localStorage.getItem(prop));
+                    var value = storage.data[prop] || null;
                     console.log("retrieving", prop, value);
                     return value;
                 }
@@ -44,10 +47,10 @@
 
             var urlConfig = QueryUtils.getQueryParameters(document.location.search);
             urlConfig.cypherSetup = urlConfig.cypherSetup || 'lesson1';
+            urlConfig.host = urlConfig.host || "https://neo4j-training-backend.herokuapp.com";
             var configGetFunction = function (prop) {
                 return urlConfig[prop] || null;
             };
-
             var getFunction = function (prop) {
                 return null;
             };
@@ -58,7 +61,8 @@
                 set: storage.set,
                 save: storage.set
             };
-
+            userState.set("uuid",uuid);
+            
             var g = new Gadget({
                 "$el": $("#" + gadgetId),
                 config: {get: configGetFunction},
