NT-87: Define tasks for gadget in asciidoc code pass task JSON as encoded GET attribute value to the gadget iframe

--- a/adocExample/adocExample.html
+++ b/adocExample/adocExample.html
@@ -421,9 +421,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="header">
 </div>
 <div id="content">
+<script src="../libs/underscore.js"></script>
 <script src="../libs/jquery.js"></script>
 <script src="../libs/jquery.modal.min.js"></script>
 <link rel="stylesheet" href="../libs/jquery.modal.min.css" type="text/css" media="screen" />
+<script src="./gadgetUtils.js"></script>
+<script src="./tasks.js"></script>
 <style>
     .modal {
         width: 770px;
@@ -435,10 +438,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
     }
 </style>
 <script type="text/javascript">
-    function setGadgetUrl(sel) {
-        var $iframe = $(sel);
-        $iframe.attr("src", $iframe.data("src"));
-    }
 </script>
 <div class="sect2">
 <h3 id="_the_cypher_query_widget_example">The Cypher Query Widget Example</h3>
@@ -448,8 +447,7 @@ You can&#8217;t break anything, and if so, just reset the temporary database to 
 </div>
 <div class="sect3">
 <h4 id="_example_gadget_number_one">Example Gadget Number One!</h4>
-<a href="#ex1" onclick="setGadgetUrl('#ex1')" rel="modal:open">Gadget 1</a>
-<iframe id="ex1" style="display:none;" data-src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="850" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div id="ex1"></div>
 <div class="paragraph">
 <p>The different widgets use different datasets, depending on the task, but save your changes across sessions.
 For most lab exercises we added helpful checks and messages to guide you along.</p>
@@ -468,21 +466,13 @@ Thinking about them and writing &amp; executing them incrementally helps you muc
 </div>
 <div class="sect3">
 <h4 id="_example_gadget_number_two">Example Gadget Number Two!</h4>
-<a href="#ex2" onclick="setGadgetUrl('#ex2')" rel="modal:open">Gadget 2</a>
-<iframe id="ex2" style="display:none;" data-src="../test.html?cypherSetup=full&cypherTask=matchByNodeLabel" width="750" height="850" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<div class="paragraph">
-<p>spamming the page with gadgets (they should all have the same number of nodes and relationships):</p>
-</div>
-<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<iframe src="../test.html?cypherSetup=full" width="750" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div id="ex2"></div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-06-17 13:25:35 EDT
+Last updated 2016-06-21 15:11:59 CEST
 </div>
 </div>
 </body>
