update example to set cypherSetup via gadgetutil

--- a/adocExample/adocExample.html
+++ b/adocExample/adocExample.html
@@ -439,14 +439,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </style>
 <script type="text/javascript">
 </script>
-<div class="sect2">
-<h3 id="_the_cypher_query_widget_example">The Cypher Query Widget Example</h3>
+<div class="sect1">
+<h2 id="_the_cypher_query_widget_example">The Cypher Query Widget Example</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>If you haven&#8217;t installed Neo4j on your machine, the Cypher Query widget is there for you to interactively explore, learn and get comfortable with Cypher in a safe environment.
 You can&#8217;t break anything, and if so, just reset the temporary database to its original state.</p>
 </div>
-<div class="sect3">
-<h4 id="_example_gadget_number_one">Example Gadget Number One!</h4>
+<div class="sect2">
+<h3 id="_example_gadget_number_one">Example Gadget Number One!</h3>
 <div id="ex1"></div>
 <div class="paragraph">
 <p>The different widgets use different datasets, depending on the task, but save your changes across sessions.
@@ -464,15 +465,16 @@ Complex elements are folded in the table and can be expanded with a click.</p>
 Thinking about them and writing &amp; executing them incrementally helps you much more in understanding the concepts.</p>
 </div>
 </div>
-<div class="sect3">
-<h4 id="_example_gadget_number_two">Example Gadget Number Two!</h4>
+<div class="sect2">
+<h3 id="_example_gadget_number_two">Example Gadget Number Two!</h3>
 <div id="ex2"></div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-06-21 15:11:59 CEST
+Last updated 2016-06-22 15:28:58 EDT
 </div>
 </div>
 </body>
