--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Gadget Test</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <style type="text/css" media="screen">
         @import url("styles/codemirror.css");
         @import url("styles/cm-cypher.css");
